fix nav z-index

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header {
   align-items: center;
   justify-content: space-between;
   position: absolute;
-  z-index: 1;
+  z-index: 3;
 }
 
 .nav-info {
@@ -140,6 +140,7 @@ header {
   box-shadow: 0 7px 20px rgba(0, 0, 0, 0.1);
 
   transition: transform 500ms;
+  z-index: 2;
 }
 
 .nav-burger {
